[gd_scene load_steps=6 format=3 uid="uid://c2n6dvo2ll2py"]

[ext_resource type="Theme" uid="uid://8pav1lism70y" path="res://assets/main_theme.tres" id="1_6wmco"]
[ext_resource type="Script" uid="uid://cd70mmjefqv1s" path="res://scripts/mm_start_game.gd" id="2_482oc"]
[ext_resource type="AudioStream" uid="uid://d32vvurvuiw4p" path="res://assets/sounds/Noisy Click.mp3" id="3_6od1f"]
[ext_resource type="Script" uid="uid://bhie5107lhmw6" path="res://scripts/mm_quit.gd" id="3_u4hxd"]
[ext_resource type="Texture2D" uid="uid://e23mw2b5j1vo" path="res://assets/sprites/Temp_TinyYellowPeanut.png" id="4_482oc"]

[node name="menu_scene" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_6wmco")

[node name="ms_button_box" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -169.0
offset_right = 350.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("1_6wmco")
theme_override_constants/separation = 400
alignment = 2

[node name="ms_start_game" type="Button" parent="ms_button_box"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
theme = ExtResource("1_6wmco")
text = "Start"
script = ExtResource("2_482oc")

[node name="ButtonClick" type="AudioStreamPlayer" parent="ms_button_box/ms_start_game"]
stream = ExtResource("3_6od1f")

[node name="ms_quit" type="Button" parent="ms_button_box"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
theme = ExtResource("1_6wmco")
text = "Quit"
script = ExtResource("3_u4hxd")

[node name="ButtonClick" type="AudioStreamPlayer" parent="ms_button_box/ms_quit"]
stream = ExtResource("3_6od1f")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -160.0
offset_top = -507.0
offset_right = 143.0
offset_bottom = -254.0
texture = ExtResource("4_482oc")

[connection signal="pressed" from="ms_button_box/ms_start_game" to="ms_button_box/ms_start_game" method="_on_pressed"]
[connection signal="finished" from="ms_button_box/ms_start_game/ButtonClick" to="ms_button_box/ms_start_game" method="_on_button_click_finished"]
[connection signal="pressed" from="ms_button_box/ms_quit" to="ms_button_box/ms_quit" method="_on_pressed"]
[connection signal="finished" from="ms_button_box/ms_quit/ButtonClick" to="ms_button_box/ms_quit" method="_on_button_click_finished"]
